--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : Carson's Blog
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Carson Chen
+  email : carson541@hotmail.com
+  github : carson541
+  twitter : carson5411
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
